History of typed commands was added.

--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ button {
     border: 2px solid black;
 }
 
-.history {
+.history-field {
     font-size: 1em;
     border: 2px solid black;
     height: 300px;
